--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,23 @@
+cat << 'EOF' > manifest.json
 {
-    "name": "طبخ للمبتدئين خطوة بخطوة",
-    "short_name": "طبخ للمبتدئين",
-    "description": "موقع تعليم الطبخ للمبتدئين بخطوات سهلة",
-    "start_url": "/",
+    "name": "وصفات طعام للمبتدئين",
+    "short_name": "مطبخي",
+    "description": "تطبيق وصفات طعام عربية وعالمية سهل الاستخدام للمبتدئين",
+    "start_url": "/index.html",
     "display": "standalone",
-    "background_color": "#ff6b6b",
-    "theme_color": "#ff6b6b",
+    "background_color": "#F8F4F0",
+    "theme_color": "#FF5733",
     "icons": [
         {
             "src": "icon-192.png",
             "sizes": "192x192",
             "type": "image/png"
+        },
+        {
+            "src": "icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
     ]
 }
+EOF
