--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,21 @@
-cat << 'EOF' > manifest.json
 {
-    "name": "وصفات طعام للمبتدئين",
-    "short_name": "مطبخي",
-    "description": "تطبيق وصفات طعام عربية وعالمية سهل الاستخدام للمبتدئين",
-    "start_url": "/index.html",
-    "display": "standalone",
-    "background_color": "#F8F4F0",
-    "theme_color": "#FF5733",
-    "icons": [
-        {
-            "src": "icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "دليل الطبخ للمبتدئين",
+  "short_name": "وصفاتي",
+  "description": "مجموعة 100 وصفة طبخ سهلة للمبتدئين",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#FF7F50",
+  "icons": [
+    {
+      "src": "icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
-EOF
